--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 layout: default
 ---
 <div>
-Welcome to my home page. I will discuss some very random stuff in here. Probably related to automation, electrics or programming.
+  Welcome to my home page. I will discuss some very random stuff in here. Probably related to automation, electrics or programming.
 </div>
+
+<div>
+  Everything discussed here is my personal spare-time stuff.
+</div>
+
+
 <hr/>
 <div class="posts">
   {% for post in site.posts %}
