--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div>
-  Welcome to my home page. I will discuss some very random stuff in here. Probably related to automation, electrics or programming.
+  This is just a simple page for my thoughts. Just posting random stuff.
 </div>
 
 
