--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div>
-  This is just a simple page for my thoughts. Just posting random stuff.
+  This is just a simple page for some posts. See my Github for some projects: [https://github.com/jisotalo](https://github.com/jisotalo).
 </div>
 
 
