--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div style="border-bottom: 1px solid #eee;">
-  This is just a simple page for some posts. See my Github for some projects: < href="https://github.com/jisotalo">https://github.com/jisotalo</a>.
+  This is just a simple page for some posts. See my Github for some projects: <a href="https://github.com/jisotalo">https://github.com/jisotalo</a>.
 </div>
 
 
