--- a/others/nvl-file-generator.html
+++ b/others/nvl-file-generator.html
@@ -31,7 +31,7 @@
 <body>
   <h1>Codesys PLC network variable list (NVL) .GVL file generator</h1>
   <p>
-    Create originally for codesys-client Node.js library:<br>
+    Created originally for codesys-client Node.js library:<br>
     <a href="https://github.com/jisotalo/codesys-client" target="_blank">https://github.com/jisotalo/codesys-client</a><br>
     <a href="https://www.npmjs.com/package/codesys-client" target="_blank">https://www.npmjs.com/package/codesys-client</a>
   </p>
