--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 layout: default
 ---
 <div style="border-bottom: 1px solid #eee;padding-bottom:20px;">
-  This is just a simple page for some posts. See my Github for some projects: <a href="https://github.com/jisotalo">https://github.com/jisotalo</a>.
+  <p>
+    Welcome to my very simple home page!
+  </p>
+  <p>
+   Here you will find some random posts about anything.
+  </p>
+  <p>
+  For more, see my Github profile: <a href="https://github.com/jisotalo">https://github.com/jisotalo</a>.
+  </p>
 </div>
 
 <div class="posts">
