--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@ layout: default
 ---
 <div style="border-bottom: 1px solid #eee;padding-bottom:20px;">
   <p>
-    Welcome to my very simple home page!
+    Welcome to my very simple home page! Here you will find some random posts about anything.
   </p>
   <p>
-   Here you will find some random posts about anything.
-  </p>
-  <p>
-  For more, see my Github profile: <a href="https://github.com/jisotalo">https://github.com/jisotalo</a>.
+    For more, see my Github profile: <a href="https://github.com/jisotalo">https://github.com/jisotalo</a>.
   </p>
 </div>
 
