--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div style="border-bottom: 1px solid #eee;padding-bottom:20px;">
-  <p>
-    Welcome to my very simple home page! Here you will find some random posts about anything.
+  <p style="margin-top:0">
+    Welcome to my home page! This serves as my personal blog as well.
   </p>
   <p>
     For more, see my Github profile: <a href="https://github.com/jisotalo">https://github.com/jisotalo</a>.
